--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -14,6 +14,19 @@ label {
   font-family: 'Roboto', sans-serif;
 }
 
+select {
+  width: 100%;
+  border: 2px solid #aaa;
+  border-radius: 4px;
+  margin: 8px 0;
+  outline: none;
+  padding: 8px;
+  box-sizing: border-box;
+  transition: .3s;
+  font-family: 'Roboto', sans-serif;
+
+}
+
 input {
   width: 100%;
   border: 2px solid #aaa;
@@ -26,6 +39,7 @@ input {
   font-family: 'Roboto', sans-serif;
 
 }
+
 
 input[type=text]:focus {
   border-color: dodgerBlue;
