--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -66,4 +66,24 @@ button:focus {
   border-color: dodgerBlue;
 }
 
+.label {
+  width: 40%;
+  border: 2px solid #aaa;
+  border-radius: 4px;
+  margin: auto;
+  display: block;
+  outline: none;
+  padding: 8px;
+  box-sizing: border-box;
+  transition: .3s;
+  background-color: rgb(207, 207, 238);
+  font-family: 'Roboto', sans-serif;
+
+}
+
+.status {
+  background-color: #b6cfe4;
+}
+
+
 @import "~normalize.css"
