--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -45,7 +45,7 @@ input[type=text]:focus {
   box-shadow: 0 0 8px 0 dodgerBlue;
 }
 
-button {
+.download {
   width: 40%;
   border: 2px solid #aaa;
   border-radius: 4px;
@@ -56,10 +56,7 @@ button {
   box-sizing: border-box;
   transition: .3s;
   background-color: rgb(207, 207, 238);
-}
-
-button:focus {
-  border-color: dodgerBlue;
+  cursor: pointer;
 }
 
 .label {
